[package]
name = "substrate-deps"
version = "0.1.0"
authors = ["Steve Degosserie <steve@parity.io>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Manage modules of a Substrate runtime."

[dependencies]
clap = "2.33"
cargo = "0.39.0"
cargo-edit = {git = "https://github.com/tofay/cargo-edit", branch = "alt-registries"}
cargo_metadata = "0.8.2"
toml = "0.5.3"
toml_edit = "0.1.5"
dirs = "2.0.2"
hex = "0.4.0"
url = "2.1.0"
git2 = "0.9.2"
json = "0.12.0"
reqwest = "0.9.20"
tar = "0.4"
flate2 = "1.0.11"
serde = "1.0.101"
serde_derive = "1.0.101"
