[package]
name = "substrate-deps"
version = "0.1.0"
authors = ["Steve Degosserie <steve@parity.io>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Manage modules of a Substrate runtime."

[dependencies]
clap = "2.33"
cargo = "0.39"
cargo-edit = {git = "https://github.com/tofay/cargo-edit", branch = "alt-registries"}
cargo_metadata = "0.8"
dirs = "2.0"
env_logger = "0.7"
hex = "0.4"
Inflector = "0.11"
log = "0.4"
toml = "0.5"
toml_edit = "0.1"
url = "2.1"
git2 = "0.9"
json = "0.12.0"
reqwest = "0.9"
tar = "0.4"
flate2 = "1.0"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
