[package]
name = "substrate-deps"
version = "0.1.1"
authors = ["Steve Degosserie <steve@parity.io>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/paritytech/substrate-deps"
repository = "https://github.com/paritytech/substrate-deps"
documentation = "https://github.com/paritytech/substrate-deps/blob/master/README.md"
description = """
Substrate-deps, a command line tool for managing Parity Substrate runtime pallet dependencies.
"""

[dependencies]
clap = "2.33"
cargo-deps = "1.2.0"
cargo-edit = "0.5.0"
dirs = "2.0"
env_logger = "0.7"
hex = "0.4"
Inflector = "0.11"
log = "0.4"
toml = "0.5"
toml_edit = "0.1"
url = "2.1"
git2 = "0.11.0"
json = "0.12.0"
reqwest = "0.9"
tar = "0.4"
flate2 = "1.0"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
